css/style.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Cormorant+Garamond&display=swap');

@font-face {
    font-family: pixels;
    src: url('/fonts/gamepixies.ttf');
}

@font-face {
    font-family: script; 
    src: url('/fonts/sundiary.ttf');
}

a {
    color: rgb(60, 140, 140);
    text-decoration: none;
    transition: .4s;
}

h2 {
    font-family: 'Comfortaa', cursive;
    font-size: 20pt;
    text-align: center;
    font-weight: bolder;
    margin-top: 20px;
}

a:hover {
    color: rgb(80, 100, 125);
    text-decoration: underline;
}

header#info-header {
    text-align: center;
    margin: 40px auto 0px auto;
}

nav#nav-menu {
    display: block;
    position: absolute;
    left: -10px;
}

nav#nav-menu h1 {
    display: none;
}

nav#nav-menu ul {
    position: absolute;
    font-family: pixels, monospace;
    font-weight: bold;
    letter-spacing: 2px;
    font-size: 18pt;
    list-style: none;
    text-align: left;
    padding: 8px;
    transition: .6s;
}

nav#nav-menu li {
    display: block;
    width: 140px;
    padding: 6px 2px 6px 10px;
    margin-top: 12px;
    border-radius: 0px 18px 18px 0px;
    border: solid;
    border-width: 2px;
    border-color: rgb(95, 95, 95);
    text-align: center;
    background-color: rgb(20, 20, 20);
}

nav#nav-menu li:hover {
    background-color: rgb(40, 40, 40);
}

nav#nav-menu a {
    color: white;
}

nav#nav-menu a:hover {
    color: rgb(80, 100, 125);
    text-decoration: none;
    font-size: 20pt;
}

figure#perfil h1 {
    font-family: pixels, monospace;
    font-size: 24pt;
    letter-spacing: 2px;
}

img.social-btns {
    margin: 0px 3px 0px 3px;
    vertical-align: middle;
    transition: opacity .6s;
}

img.social-btns:hover {
    width: 28px;
    opacity: .5;
}

div#extra-social-media {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 10pt;
}

div#quote {
    font-family: 'Cormorant Garamond', serif;
    font-size: 14pt;
    text-align: center;
}

div#quote blockquote cite {
    font-style: normal;
    text-align: end;
}

hr {
    margin: auto 20% auto 20%;
    border-color: rgb(95, 95, 95);
}

article#about-me {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: rgb(20, 20, 20);
    border-color: rgb(95, 95, 95);
    border-style: solid;
    border-width: 2px;
    border-radius: 18px;
    margin: 60px 10px 0px 10px;
}

article#about-me p {
    text-align: justify;
    text-indent: 20pt;
    margin: 0px 40px 30px 40px;
}

p#last-update {
    opacity: .6;
    font-family: monospace;
    font-size: 6pt;
    text-align: end;
    letter-spacing: .6px;
    margin-top: 40px;
}

/* Media Queries: Tablet Landscape */
@media screen and (max-width: 1060px) {
    #primary {width:67%;}
    #secondary {width:30%; margin-left:3%;}  
}

/* Media Queries: Tabled Portrait */
@media screen and (max-width: 768px) {
    #primary {width:100%;}
    #secondary {width:100%; margin:0; border:none;}
}

